--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,12 +13,17 @@ WORKDIR /app
 # Copy backend app files
 COPY . .
 
-# Install python dependencies
+# Install python dependencies (GPU version of PyTorch)
 RUN pip3 install --upgrade pip
+
+# IMPORTANT: install PyTorch for CUDA 12.4
+RUN pip3 install torch --extra-index-url https://download.pytorch.org/whl/cu124
+
+# Install remaining Python deps
 RUN pip3 install --no-cache-dir -r requirements.txt
 
 # Expose FastAPI port
 EXPOSE 8000
 
 # Start FastAPI server
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port",  "8000"]
