--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,26 +7,18 @@ RUN apt-get update && apt-get install -y \
     python3 python3-pip python3-venv git ffmpeg && \
     apt-get clean
 
-# App directory
 WORKDIR /app
 COPY . .
 
 RUN pip3 install --upgrade pip
 
-# ------------------------------------------------------
-# Install CORRECT PyTorch GPU version (CUDA 12.1)
-# CUDA 12.4 wheels DO NOT EXIST yet — this is REQUIRED
-# ------------------------------------------------------
+# Install CORRECT PyTorch GPU version (supports CUDA 12.1, works on CUDA 12.4 base)
 RUN pip3 install torch==2.3.0 --extra-index-url https://download.pytorch.org/whl/cu121
 
-# ------------------------------------------------------
-# Install diffusers + transformers (latest)
-# ------------------------------------------------------
+# Install diffusers + transformers
 RUN pip3 install --upgrade diffusers transformers
 
-# ------------------------------------------------------
-# Install project requirements
-# ------------------------------------------------------
+# Project requirements
 RUN pip3 install --no-cache-dir -r requirements.txt
 
 EXPOSE 8000
