--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,23 +2,21 @@ FROM pytorch/pytorch:2.3.0-cuda12.1-cudnn8-runtime
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Install system packages
+# System deps
 RUN apt-get update && apt-get install -y ffmpeg git && apt-get clean
 
-# Set working directory
 WORKDIR /app
 
-# Copy project files
 COPY . .
 
-# Upgrade pip
 RUN pip install --upgrade pip
 
-# Install dependencies
+# Install matching TorchVision
+RUN pip install --no-cache-dir torchvision==0.18.0
+
+# Install app dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Expose port
 EXPOSE 8000
 
-# Start FastAPI server
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
