--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,6 @@ FROM pytorch/pytorch:2.3.0-cuda12.1-cudnn8-runtime
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-# System deps
 RUN apt-get update && apt-get install -y ffmpeg git && apt-get clean
 
 WORKDIR /app
@@ -11,10 +10,9 @@ COPY . .
 
 RUN pip install --upgrade pip
 
-# Install matching TorchVision
-RUN pip install --no-cache-dir torchvision==0.18.0
+# REQUIRED FIX
+RUN pip install torchvision==0.18.0 --index-url https://download.pytorch.org/whl/cu121
 
-# Install app dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8000
